 - GBA I/O: Fix writing to DISPCNT CGB flag (fixes mgba.io/i/902)
 - GBA Memory: Partially revert prefetch changes (fixes mgba.io/i/840)
 - PSP2: Fix issues causing poor audio
 - Wii: Fix screen tear when unpausing
 - GBA: Fix some GBA ROM misdetection (fixes mgba.io/i/978)
 - GBA Hardware: RTC accuracy improvements
 - GB Timer: Minor accuracy improvements
 - GB Audio: Clock frame events on DIV
Misc:
 - GBA Timer: Use global cycles for timers
 - GBA: Extend oddly-sized ROMs to full address space (fixes mgba.io/i/722)
 - All: Make FIXED_ROM_BUFFER an option instead of 3DS-only
 - Qt: Redo GameController into multiple classes
 - Test: Restructure test suite into multiple executables
 - Python: Integrate tests from cinema test suite
 - Util: Don't build crc32 if the function already exists
 - GBA: Implement display start DMAs
 - Qt: Prevent window from being created off-screen
 - Qt: Add option to disable FPS display
 - GBA: Improve multiboot image detection
 - GB MBC: Remove erroneous bank 0 wrapping
 - GBA Cheats: Allow multiple ROM patches in the same slot
 - GB: Skip BIOS option now works
 - Libretro: Add frameskip option
 - GBA Memory: 64 MiB GBA Video cartridge support
 - 3DS: Scale font based on glyph heights (fixes mgba.io/i/961)
 - PSP2: Use system enter key by default
 - 3DS: Remove deprecated CSND interface

0.6.1: (2017-10-01)
Bugfixes:
 - GB, GBA: Fix crashes when attempting to identify null VFiles
 - GB, GBA: Fix sync to video with frameskip
 - GB, GBA Savedata: Fix savestate-related save overwriting (fixes mgba.io/i/834)
 - GB Audio: Fix NRx2 writes while active (fixes mgba.io/i/866)
 - GB Core: Fix palette loading when loading a foreign config
 - GB MBC: Pocket Cam memory should be accessible without enabling
 - GB MBC: Fix SRAM sizes 4 and 5
 - GB MBC: Fix RTC initialization (fixes mgba.io/i/825)
 - GB MBC: Fix RTC loading when file size is off
 - GB Memory: Initialize peripheral pointers